--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,10 +33,9 @@ jobs:
       uses: s3-actions/s3cmd@v1.1
       with:
         provider: linode
-    # s3 region
         region: eu-central-1
-    # s3 access key
         access_key: 1CZLCYOQRELZHJE9XDGR
-    # s3 secret key
         secret_key: r9JXngigGkPBNi1UXNysGuypIQt1Lhu9qww1p9Ae
+    - run: s3cmd ws-create --ws-index=index.html --ws-error=404.html s3://xchange  
+    - run: s3cmd sync dist s3://xchange -P
     
