--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -37,5 +37,5 @@ jobs:
         access_key: 1CZLCYOQRELZHJE9XDGR
         secret_key: r9JXngigGkPBNi1UXNysGuypIQt1Lhu9qww1p9Ae
     - run: s3cmd ws-create --ws-index=index.html --ws-error=404.html s3://xchange  
-    - run: s3cmd sync dist s3://xchange -P
+    - run: s3cmd sync dist/ s3://xchange -P
     
