--- a/.private.env
+++ b/.private.env
@@ -28,3 +28,5 @@ VUE_APP_STACKS_EXPLORER=https://explorer.stacks.co
 VUE_APP_STACKS_API=https://stacks-node-api.mainnet.stacks.co
 VUE_APP_MARKETPLACE_URL=https://xchange.risidio.com
 
+NEW_WALLET_Sec_key= {"lizard public casual sea spatial fire ripple blur sad invest way raven ranch gasp verb glance keep rocket anxiety engine describe view accuse ball"}
+password= RisidioMarketPlace
