--- a/.staging.env
+++ b/.staging.env
@@ -1,4 +1,4 @@
-NODE_ENV=production
+NODE_ENV=staging
 
 VUE_APP_RISIDIO_API=https://tapi.risidio.com
 VUE_APP_RISIDIO_ASSET_URL="https://dcmarket2.risidio.com/assets/"
