--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,7 @@
     "baseUrl": ".",
     "typeRoots": [ "./types", "./node_modules/@types"],
     "types": [
-      "webpack-env",
-      "mocha",
-      "chai"
+      "webpack-env"
     ],
     "paths": {
       "@/*": [
