--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "prismic-dom": "^2.2.5",
     "register-service-worker": "^1.7.1",
     "risidio-pay": "^0.6.30",
+    "three": "^0.133.1",
+    "three-gltf-loader": "^1.111.0",
     "video.js": "^7.12.1",
     "vue": "^2.6.11",
     "vue-browser-detect-plugin": "^0.1.13",
